--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "react-alkemy",
+  "name": "alkemy",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.4.0",
+    "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.9.0",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
