--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +28,8 @@
     "react-gallery-carousel": "^0.4.0",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-lottie": "^1.2.4",
+    "react-lottie-player": "^2.1.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
